--- a/8.二叉搜索树/8.二叉搜索树.vcxproj
+++ b/8.二叉搜索树/8.二叉搜索树.vcxproj
@@ -144,6 +144,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="bsTree.h" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
