--- a/8.二叉搜索树/8.二叉搜索树.vcxproj.filters
+++ b/8.二叉搜索树/8.二叉搜索树.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClCompile Include="bsTree.h">
       <Filter>头文件</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
